--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -46,14 +46,11 @@
     </div>
 
     <p>
-        English poet, playwright and actor, widely regarded as the greatest writer in the English language
-        and the world's pre-eminent dramatist. Often called England's national poet and the "Bard of Avon".
-        My extant work is including collaborations, consist of approximately 38 plays, 154 sonnets,
-        two long narrative poems and a few other verses, some of uncertain authorship.
+        insert personal profile
     </p>
 
     <h2>Professional Experience</h2>
-    {{#each plays}}
+    {{#each experience}}
     <div class="card mb-4">
         <div class="card-body">
             <h3>{{ title }}</h3>
