--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -50,7 +50,7 @@
     </p>
 
     <h2>Professional Experience</h2>
-    {{#each experience}}
+    {{#each projects}}
     <div class="card mb-4">
         <div class="card-body">
             <h3>{{ title }}</h3>
@@ -62,6 +62,11 @@
                 {{#each badges }}
                 <span class="badge badge-primary">{{ this }}</span>
                 {{/each}}
+            </div>
+            <div>
+                
+                {{GitHub}}
+               
             </div>
         </div>
     </div>
