--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -64,9 +64,7 @@
                 {{/each}}
             </div>
             <div>
-                
-                {{GitHub}}
-               
+                <a href="https://github.com/RhysAlfShaw/Portfolio">Project Files</a>
             </div>
         </div>
     </div>
