--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -49,7 +49,7 @@
         insert personal profile
     </p>
 
-    <h2>Professional Experience</h2>
+    <h2>Research Projects</h2>
     {{#each projects}}
     <div class="card mb-4">
         <div class="card-body">
