--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -26,6 +26,10 @@
 }
 
 @media not print {
+    html {
+        background: url(Assets/images/james-webb1.png) no-repeat center fixed;
+        background-size: cover;
+    }
     .print {
         display: none;
     }
