--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -1,4 +1,8 @@
 @media print {
+    html {
+        background: url(james-webb1.png) no-repeat center fixed;
+        background-size: cover;
+    }
     body {
         font-size: 19px;
     }
